--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,7 +27,6 @@ jobs:
         run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
 
       - name: Publish to GitHub Packages
-        run: mvn deploy --no-transfer-progress
+        run: mvn deploy
         env:
-          GITHUB_USERNAME: ${{ secrets.USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
